--- a/OtherResources/bkrs_prefs.html
+++ b/OtherResources/bkrs_prefs.html
@@ -121,7 +121,7 @@ input[type="radio"] {
 			<input type="radio" name="color_mode" value="5" />
 		</div>
 
-		БРуКС — Большой Русско-Китайский Словарь<br />
+		大БКРС — Большой Китайско-Русский Словарь<br />
 		версия 61 от 2014.03.03
 		<hr />
 
