<d:entry ...> вынесен в html файл

--- a/front_back_matter.html
+++ b/front_back_matter.html
@@ -1,3 +1,4 @@
+<d:entry id="front_back_matter" d:title="обложка словаря">
 <d:index d:value="ratijas &amp; mac-j studio" d:title="ratijas &amp; mac-j studio"/>
 
 <h1 style="text-align: center;"><b>обложка 大БКРС / БРуКС</b></h1>
@@ -24,3 +25,4 @@
 <p>данный релиз брукс для dictionary.app — стандартного приложения mac os — скорее всего был подготовлен энтузиастом-одиночкой, известным в интернетах под ником <a href="http://bkrs.info/user.php?name=ratijas">ratijas</a>. хотя тоже ещё не факт, так как пакет мог быть собран кем угодно, используя открытые исходники на <a href="http://bkrs.info/taolun/thread-153-post-26605.html#pid26605">странице форума</a>. так как словарь каждый день чуть-чуть меняется, добавляются новые слова, редактируются уже имеющиеся, то примерно раз в месяц в <a href="http://bkrs.info/taolun/thread-153-post-26605.html#pid26605">ветку</a> форума будет выкладыватся обновление</p>
 <p>словарь на mac os x выходит под <a href="http://ru.wikipedia.org/wiki/Копилефт">копилефтом <span class="copyleft">©</span> </a>, а это означает, что разработчик забыл-запил-забил на авторские права. :)<br />
 учите китайский и не тратьте время на чепуху!</p>
+</d:entry>
