если аккуратно настроить ручками -- будет работать

--- a/front_back_matter.html
+++ b/front_back_matter.html
@@ -4,7 +4,7 @@
 <h1 style="text-align: center;"><b>обложка 大БКРС / БРуКС</b></h1>
 
 <div style="float: right"><img src="Images/icon.png" alt="иконка словаря"/></div>
-<h2>大БКРС - открытый редактируемый большой китайско-русско-китайский словарь</h2>
+<h2>大БКРС — открытый редактируемый большой китайско-русско-китайский словарь</h2>
 
 <h3>сайт словаря: <a href="http://bkrs.info">bkrs.info</a></h3>
 <p>на сайте есть много разных "плюшек", которые трудно и/или невозможно воспроизвести в приложении dictionary. например: пословный перевод предложений, теги, цветной пиньинь, саттелиты и т.д.</p>
