--- a/both/prefs.html
+++ b/both/prefs.html
@@ -121,8 +121,8 @@ input[type="radio"] {
 			<input type="radio" name="color_mode" value="5" />
 		</div>
 
-		БРуКС — Большой Русско-Китайский Словарь<br />
-		версия 61 от 2014.03.03
+		{{BundleDisplayName}} — Большой Китайско-Русско-Китайский Словарь<br />
+		{{BundleShortVersionString}}
 		<hr />
 
 		<img src="Images/icon.png">
