extended README.md

--- a/front_back_matter.html
+++ b/front_back_matter.html
@@ -7,7 +7,7 @@
 <h2>大БКРС — открытый редактируемый большой китайско-русско-китайский словарь</h2>
 
 <h3>сайт словаря: <a href="http://bkrs.info">bkrs.info</a></h3>
-<p>на сайте есть много разных "плюшек", которые трудно и/или невозможно воспроизвести в приложении dictionary. например: пословный перевод предложений, теги, цветной пиньинь, саттелиты и т.д.</p>
+<p>на сайте есть много разных "плюшек", которые трудно и/или невозможно воспроизвести в приложении dictionary. например: пословный перевод предложений, теги, <span style="text-decoration:line-through">цветной пиньинь</span> (уже есть), саттелиты и т.д.</p>
 
 <h3>цель 大БКРС:</h3>
 <p>создание идеального словаря для практической работы с современным китайским языком</p>
